--- a/styles/base.css
+++ b/styles/base.css
@@ -58,10 +58,13 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 1.125rem;
-    font-weight: bold;
     border-radius: 0.5rem 0.5rem 0 0;
     background-color: #0e5e6f;
+}
+
+.card-heading>h2{
+    font-size: 1.125rem;
+    font-weight: bold;
     color: white;
 }
 
