--- a/styles/base.css
+++ b/styles/base.css
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap");
-
 header > span {
     font-size: 1.5rem;
     font-weight: bold;
@@ -66,6 +64,10 @@ main {
     font-size: 1.125rem;
     font-weight: bold;
     color: white;
+}
+
+.separator{
+    width: 80%;
 }
 
 footer {
