final audit changes

--- a/styles/base.css
+++ b/styles/base.css
@@ -18,7 +18,7 @@ nav > a:hover {
     color: #093e47;
 }
 
-main {
+.content-grid {
     display: grid;
     grid-template-areas:
         "heading heading"
