--- a/styles/base.css
+++ b/styles/base.css
@@ -160,6 +160,7 @@ body {
     font-family: "Libre Baskerville", serif;
     font-weight: 400;
     font-style: normal;
+    margin: 0 4rem 0 4rem;
 }
 
 .font-heading {
