correct google fonts

--- a/styles/place.css
+++ b/styles/place.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap');
+
 :root{
     --theme-color: #1E3F66;
     --theme-color-light: #1E3F66FA;
